fix color contrast on syllabus

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -69,3 +69,10 @@ $base-button-color: $grey-dk-200;
 
 // Custom colors
 $hw-rel: #009d9a;
+
+
+:root {
+  --syllabus-lecture: #90ee90;    /* Light Green */
+  --syllabus-discussion: #a0c4ff; /* Light Blue */
+  --syllabus-deadline: #ffadad;   /* Light Red/Salmon */
+}
