--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -34,3 +34,9 @@ $hw-rel: #005d5d;
     color: #000000 !important;
   }
 }
+
+:root {
+  --syllabus-lecture: #006b00;    /* Darker green */
+  --syllabus-discussion: #0044cc; /* Darker blue */
+  --syllabus-deadline: #c91d1d;   /* Red */
+}
